# BioCatalyzer

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  readme_bioreactor_cli.md  readme_matcher_cli.md  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  main.yaml  main.yml  publish.yml
src/biocatalyzer/: __init__.py  _utils.py  bioreactor.py  cli.py  cli_bioreactor.py  cli_matcher.py  matcher.py
src/biocatalyzer/chem/: __init__.py  _utils.py  chem_utils.py  rdkit_utils.py
src/biocatalyzer/clis/: cli.py  cli_bioreactor.py  cli_matcher.py
src/biocatalyzer/data/compounds/: drugs.csv
src/biocatalyzer/data/coreactants/: all_coreactants.tsv
src/biocatalyzer/data/masses_to_match/: masses.tsv
src/biocatalyzer/data/ms_data_example/: ms_data_paper.tsv
src/biocatalyzer/data/patterns_to_remove/: patterns.tsv
src/biocatalyzer/data/reactionrules/: all_reaction_rules_forward_no_smarts_duplicates.tsv
src/biocatalyzer/io_utils/: __init__.py  loaders.py
src/biocatalyzer/ms_matcher/: __init__.py  ms_data_matcher.py
tests/: __init__.py  mock_bioreactor.py
tests/data/byproducts_to_remove_sample/: byproducts.tsv  byproducts_subsample.tsv
tests/data/compounds_sample/: compounds.tsv  compounds_subsample.tsv
tests/data/coreactants_sample/: coreactants.tsv
tests/data/masses_example/: masses.tsv
tests/data/ms_data_sample/: ms_data.tsv  ms_data_subsample.tsv
tests/data/new_compounds_sample/: new_compounds.tsv  new_compounds_subsample.tsv
tests/data/organisms_sample/: organisms_subsample.tsv  organisms_to_use.tsv
tests/data/patterns_to_remove_sample/: patterns.tsv  patterns_subsample.tsv
tests/data/reaction_rules_sample/: reactionrules.tsv  reactionrules_subsample.tsv
tests/data/results_sample/: matches.tsv  new_compounds.tsv
tests/unit_tests/: test_bioreactor.py  test_ms_matcher.py  test_utils.py
tests/unit_tests/chem/: test_chem_utils.py
tests/unit_tests/clis/: test_bioreactor_cli.py  test_cli.py  test_matcher_cli.py
tests/unit_tests/io_utils/: test_loaders.py
