[metadata]
name = biocatalyzer
version = 0.0.4-beta
description = BioCatalyzer: a rule-based tool to predict compound metabolism
long_description = file: README.md
long_description_content_type = text/markdown
keywords = reaction-rules, metabolism, enzymatic-reactions, chemoinformatics, cheminformatics
author = João Correia
author_email = jfscorreia95@gmail.com
url = https://github.com/jcorreia11/BioCatalyzer
download_url = https://github.com/jcorreia11/BioCatalyzer/archive/refs/tags/v0.0.4-beta.tar.gz
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.7
zip_safe = False
include_package_data = True
install_requires =
    rdkit-pypi>=2022.3.5
    click>=8.1.3
    pandas>=1.5.0

[options.entry_points]
console_scripts =
    biocatalyzer_cli = biocatalyzer.clis.cli:biocatalyzer_cli
    bioreactor_cli = biocatalyzer.clis.cli_bioreactor:bioreactor_cli
    matcher_cli = biocatalyzer.clis.cli_matcher:matcher_cli

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=7.1.1
    pytest-cov>=3.0.0
    mypy>=0.942
    flake8>=4.0.1
    tox>=3.25.0

[options.package_data]
biocatalyzer = py.typed
biocatalyzer.data.byproducts_to_remove=
    *.tsv
biocatalyzer.data.patterns_to_remove=
    *.tsv
biocatalyzer.data.reactionrules=
    all_reaction_rules_forward_no_smarts_duplicates_sample.tsv

[flake8]
max-line-length = 160
